@@ -125,6 +125,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - Smalltalk              Bananeweizen
 - Smarty                 Alan Juden
 - T-SQL                  Duncan Lock
+- TeraTerm               Boris Maisuradze
 - Text                   SmokingRope
 - TCL                    Reid van Melle
 - thinBasic              Eros Olmi
